--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
         
         <center><h2>QUIENES SOMOS</h2></center>
-            <center><p>Ponemos a tu alcance un servicio adaptado a tus necesidades, desde una consultoría integral con super-
+            <center><p>Ponemos a tu alcance un servicio adaptado a tus necesidades, desde una consultoría integral con super-<br/>
                 visión de todos y cada uno de los pasos que has de seguir para crear un negocio actual (comunicación,
-                diseño corporativo, tecnologías...) a productos adaptados a metodologías ágiles de creación de apps diseña-
+                diseño<br/> corporativo, tecnologías...) a productos adaptados a metodologías ágiles de creación de apps diseña-<br/>
                 das por nosotros y avaladas por nuestros años de experiencia.</p></center>
 
 
